[package]
name = "rustisvn"
version = "0.1.0"
description = "A svn TUI program"
authors = ["spaceunandev <jocsan.fonseca@di.unanleon.edu.ni>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5.41", features = ["derive"] }

[[bin]]
name = "rsvn"
path = "src/main.rs"
